--- a/symfony/.gitignore
+++ b/symfony/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -13,3 +12,20 @@
 /phpunit.xml
 /.phpunit.cache/
 ###< phpunit/phpunit ###
+
+###> IDE ###
+.idea/
+.vscode/
+*.swp
+*.swo
+###< IDE ###
+
+###> OS ###
+.DS_Store
+Thumbs.db
+###< OS ###
+
+###> Project ###
+/composer.phar
+*.log
+###< Project ###
